# SimCourse

./: .clang-format  CMakeLists.txt  CPU.cpp  CPU.h  README.md  asm.rb  decoder.cpp  execute.cpp  instruc.cpp  main.cpp
