cmake_minimum_required(VERSION 3.10)
project(CPU_Simulator)

find_package(CLI11 REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(cpu_simulator
    main.cpp
    cpu.cpp 
    instruc.cpp
    decoder.cpp
    execute.cpp
)

target_link_libraries(cpu_simulator PRIVATE CLI11::CLI11)
